# fallingrust

./: .gitignore  .rustfmt.toml  0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  discussion.txt  index.html  log.txt  notes.txt  todo.txt
.github/workflows/: clippy.yaml  deploy-gh.yaml  rustdoc.yaml  rustfmt.yaml
src/: cells.rs  input.rs  lib.rs  misc.rs  simulator.rs  space.rs  timer.rs  ui.rs  world.rs
www/: index.js  package-lock.json  package.json  webpack.config.js
