[package]
name = "fallingrust"
version = "0.1.0"
authors = ["transistor <trans@jabberwocky.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "Touch", "TouchEvent", "TouchList", "Performance"] }
